# Bachelor_project

./: .gitignore  CLI.txt  CODE copy.txt  CODE.txt  DATA ANALYSIS.ipynb  GPT_CLI_Combined.txt  GPT_Own_description.txt  IDEAs.txt  LICENSE  NLTK_import.py  README.md  chestxray_pipeline_24776209.err  chestxray_pipeline_24776209.out  code.txt  notesGPT.txt  notes_vis.txt  problem_model.txt  promptforai.txt  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  vis.txt  wget-log  wget-log.1
.github/workflows/: linting.yaml  tests.yaml
Run_example/: config.yaml  env.txt  runtime.txt
Run_example/evaluations/: classification_epoch_metrics.csv  final_test_metrics_summary.csv  per_image_results.csv
Testing/: Testing.ipynb  data.py  evaluate.py  model.py  run_pipeline.py  train.py  visualize.py
configs/: default.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
fake_local/: config.yaml  data.py  evaluate.py  model_working_old.py  notes.txt  run_local.sh  run_pipeline.py  run_pipeline_working_old.py  train.py  train_working_old.py  visualize.py
hpc/: data.py  data_gen.ipynb  evaluate.py  model.py  requirements.txt  run_hpc.sh  run_pipeline.py  run_pipeline_working_old.py  train.py  visualize.py
local/: Data_GEN_NOtebok.ipynb  data.py  data_notes.txt  evaluate.py  radtex_model.py  run_hpc.sh  run_local_HOW.txt  run_pipeline.py  testing.ipynb  train.py  visualize.py
src/: DOWNLOAD.ipynb  Download DATA.ipynb  Notebook.ipynb  data.py  evaluate.py  model.py  train.py  visualize.py
tests/: test_data.py
(+3 files in other folders)
